--- a/中一刀報表.md
+++ b/中一刀報表.md
@@ -4,13 +4,14 @@
 
 ## Jasper
 
-Page Format: 595*396
-上下邊界: 至少 10px
-左右邊界: 視印出後實際情況調整
+- Page Format: 595*396
+- 上下邊界: 至少 10px
+- 左右邊界: 視印出後實際情況調整
 
 ## 紙張格式新增
 
 Win10: 控制台->印表機*之類的設定*->列印伺服器*什麼的*
+
 Win11: 設定->藍芽與裝置(Bluetooth & devices)->列印伺服器內容
 
 - 名稱: 中一刀
@@ -21,12 +22,15 @@ Win11: 設定->藍芽與裝置(Bluetooth & devices)->列印伺服器內容
 ## LQ310
 
 到印表機設定中找到 LQ310->列印喜好設定
+
 紙張選擇上述新增的中一刀
+
 (若沒有上述新增的選項, 表示驅動無安裝, 
+
 至EPSON官網下載即可, *Win11 可直接安裝 Win10 的驅動*)
 
 ## 列印時
 
-方向: 直式
-紙張: 中一刀
-比例: 實際大小(或100%)
+- 方向: 直式
+- 紙張: 中一刀
+- 比例: 實際大小(或100%)
