--- a/中一刀報表.md
+++ b/中一刀報表.md
@@ -10,7 +10,7 @@
 
 ## 紙張格式新增
 
-Win10: 控制台->印表機*之類的設定*->列印伺服器*什麼的*
+Win10: 控制台->硬體和音效->單擊一下點陣式印表機->*上面那排*列印伺服器內容
 
 Win11: 設定->藍芽與裝置(Bluetooth & devices)->列印伺服器內容
 
@@ -19,7 +19,7 @@ Win11: 設定->藍芽與裝置(Bluetooth & devices)->列印伺服器內容
 - 寬: 10
 - 高: 5.5
 
-## LQ310
+## LQ310(或其他印表機, 視型號而定)
 
 到印表機設定中找到 LQ310->列印喜好設定
 
